[package]
name = "un-potato"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["unstable-doc"] }
dirs = "5.0.1"
nom = "7.1.3"
notify-rust = "^4"
rodio = "0.17.1"
tokio = {version = "1.24.2", features = ["time", "rt", "macros", "signal", "rt-multi-thread"]}
